--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=35
+pkgrel=37
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -173,6 +173,8 @@ source=(
  "0055-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch"
  "0056-sched-core-Always_flush_pending_blk_plug.patch"
  "0057-watchqueue-5.19.patch"
+ "0058-pinctrl_amd-no_save-restore_irq_status_n_wake.patch"
+ "0059-sched-fair_6.x-backports.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -709,5 +711,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'e22faa7811a3de10affe5f7e6d671f263599c75f9f78cca6e3cdf7a9e36d71de'
             'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47'
             'c68b39d60c410588609f7d0bc0cbe4dba4978394ad05d75fc588a592f45e924a'
-            'a1edb15e66c1b5525aca56ae4729984b393f352fd71fa7674519d67877b360b6')
+            'a1edb15e66c1b5525aca56ae4729984b393f352fd71fa7674519d67877b360b6'
+            'a307c5cc3a35c7d3e4c5b6ae464ab319f2e83c1f5e95111768426ad8c8827219'
+            '6344a588af7a6fa6de33552a83141a136ee1e5a0743a1367bfeb63d542b67a40')
 
