--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=39
+pkgrel=40
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -179,6 +179,9 @@ source=(
  "0061-PM-hibernate-defer_device_probing_when_resuming_from_hibernation.patch"
  "0062-ALSA-use_fasync_helpers_workaround.patch"
  "0063-sched-fair-Minor_SIS_UTIL_optimizations.patch"
+ "0064-locking-rwsem_Disable_preemption_while_trying_for_rwsem_lock_V2.patch"
+ "0066-mm-pagewalk_Fix_race_between_unmap_n_page_walker.patch"
+ "0067-USB-core-Prevent_nested_device-reset_calls.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -721,5 +724,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '042eb0a2d2142ef7955182f4be3adcbddba72231f5766de1434fc2ff2c41036b'
             '954cc8cac4f051c0115c2a8574246ad6babac82438c1e74740ae6ff534af5db6'
             'fb179fc1a8c163db6c139d03aea41c1769763225e71ab89217a42138062e418a'
-            '73fcdd0c088067872d3d452e4505b05496f6c23cc2cd1b68333acc2897c56954')
+            '73fcdd0c088067872d3d452e4505b05496f6c23cc2cd1b68333acc2897c56954'
+            '3da077dd1ef979f76864426277882dfa8fe68f9711edd6561d89e4c0d6e02adc'
+            '41a19f5a5c0d4fe932068bc568409a12424f7946bb9dc22ee68126691c2d3eca'
+            'bd53116dee6b641c7d6313a546873b6c5dc6a35621a0c6d0e33b78ba61fcdc4e')
 
