--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=42
+pkgrel=44
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -185,6 +185,9 @@ source=(
  "0068-Add_latency_priority_for_CFS_class.patch"
  "0070-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
  "0071-sched-all_no_BUG_ON_warn_instead.patch"
+ "0073-ALSA_519_913.patch"
+ "0074-cgroups_rwsem.patch"
+ "0075-acpi-i2c_wake_irq_patchwork.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -733,5 +736,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'bd53116dee6b641c7d6313a546873b6c5dc6a35621a0c6d0e33b78ba61fcdc4e'
             'b087b71946ffabee7cbf8e5caf5a6cd23a139bb890c8e61b46e0290f6884ffa4'
             'b10a8f2280996dbd9658001d7ccb83ea22cfc79b8e5361cdbf8b94a2d7f821a6'
-            '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657')
+            '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
+            '36c441891b9ac232217504f31955d2ea387125de510fd7d5c329a97e3d9562b0'
+            '560f67167324aab09f2882c7418f34df6521f5182ee2357060e04731a35b077e'
+            'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9')
 
