--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=44
+pkgrel=48
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -188,6 +188,8 @@ source=(
  "0073-ALSA_519_913.patch"
  "0074-cgroups_rwsem.patch"
  "0075-acpi-i2c_wake_irq_patchwork.patch"
+ "0076-sched-fair-limit_sched_slice_duration.patch"
+ "0077-Fixups_n_Backports_for_s2idle.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -734,10 +736,12 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '3da077dd1ef979f76864426277882dfa8fe68f9711edd6561d89e4c0d6e02adc'
             '41a19f5a5c0d4fe932068bc568409a12424f7946bb9dc22ee68126691c2d3eca'
             'bd53116dee6b641c7d6313a546873b6c5dc6a35621a0c6d0e33b78ba61fcdc4e'
-            'b087b71946ffabee7cbf8e5caf5a6cd23a139bb890c8e61b46e0290f6884ffa4'
-            'b10a8f2280996dbd9658001d7ccb83ea22cfc79b8e5361cdbf8b94a2d7f821a6'
+            '160a932d7560a8cb1ff9a045a4511e20d9b29c59829d963bb91dd9efffaa0efe'
+            '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
             '36c441891b9ac232217504f31955d2ea387125de510fd7d5c329a97e3d9562b0'
             '560f67167324aab09f2882c7418f34df6521f5182ee2357060e04731a35b077e'
-            'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9')
+            'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9'
+            'aba405b0deef1b249fc5d58095e88b641f7763e946ea8370859a4539d2440c90'
+            '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474')
 
