--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=48
+pkgrel=50
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -190,6 +190,7 @@ source=(
  "0075-acpi-i2c_wake_irq_patchwork.patch"
  "0076-sched-fair-limit_sched_slice_duration.patch"
  "0077-Fixups_n_Backports_for_s2idle.patch"
+ "0078-v3-Softirq-rt-Optimizations.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -672,7 +673,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
-            'e884c5df8c1b99b498fd3639a87196bd6190a01bf3f1f08ab0f3430fb5224517'
+            'ee9fb22f007fff6442e23f9ccc7b3e387ab24fd7c2cf22aeae894207b75ba31a'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
             '9824cd3a41db040bf28d6538aa4805f869333139cbcf43e0422e1b42f5401270'
@@ -743,5 +744,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '560f67167324aab09f2882c7418f34df6521f5182ee2357060e04731a35b077e'
             'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9'
             'aba405b0deef1b249fc5d58095e88b641f7763e946ea8370859a4539d2440c90'
-            '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474')
+            '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474'
+            'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5')
 
