--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -134,6 +134,7 @@ CONFIG_PREEMPT_RT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPTION=y
 CONFIG_SCHED_CORE=y
+CONFIG_RT_SOFTIRQ_OPTIMIZATION=y
 
 #
 # CPU/Task time and stats accounting
