--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=50
+pkgrel=51
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -183,6 +183,7 @@ source=(
  "0066-mm-pagewalk_Fix_race_between_unmap_n_page_walker.patch"
  "0067-USB-core-Prevent_nested_device-reset_calls.patch"
  "0068-Add_latency_priority_for_CFS_class.patch"
+ "0069-swiotlb-Dont_panic.patch"
  "0070-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
  "0071-sched-all_no_BUG_ON_warn_instead.patch"
  "0073-ALSA_519_913.patch"
@@ -191,6 +192,8 @@ source=(
  "0076-sched-fair-limit_sched_slice_duration.patch"
  "0077-Fixups_n_Backports_for_s2idle.patch"
  "0078-v3-Softirq-rt-Optimizations.patch"
+ "0079-ACPI-processor_idle-Skip_dummy_wait_for_AMD-Zen.patch"
+ "0080-timer_fixes_6.x-git.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -738,6 +741,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '41a19f5a5c0d4fe932068bc568409a12424f7946bb9dc22ee68126691c2d3eca'
             'bd53116dee6b641c7d6313a546873b6c5dc6a35621a0c6d0e33b78ba61fcdc4e'
             '160a932d7560a8cb1ff9a045a4511e20d9b29c59829d963bb91dd9efffaa0efe'
+            'd1df5ab2873c559838145a5692158d43884041ae1752a2f7a62da52639426b30'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
             '36c441891b9ac232217504f31955d2ea387125de510fd7d5c329a97e3d9562b0'
@@ -745,5 +749,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9'
             'aba405b0deef1b249fc5d58095e88b641f7763e946ea8370859a4539d2440c90'
             '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474'
-            'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5')
+            'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5'
+            '25acc8e306a9a3433da06dbc97d4c48fef249faba871e9701cffef4badbbc859'
+            'ebb967b1e99511134dc540a7032426f0f31cd1faa24583d3820798eda2664240')
 
