--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=51
+pkgrel=54
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -194,6 +194,7 @@ source=(
  "0078-v3-Softirq-rt-Optimizations.patch"
  "0079-ACPI-processor_idle-Skip_dummy_wait_for_AMD-Zen.patch"
  "0080-timer_fixes_6.x-git.patch"
+ "0081-sched-fair-feec-scale_rt_capacity-improvements.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -740,7 +741,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '3da077dd1ef979f76864426277882dfa8fe68f9711edd6561d89e4c0d6e02adc'
             '41a19f5a5c0d4fe932068bc568409a12424f7946bb9dc22ee68126691c2d3eca'
             'bd53116dee6b641c7d6313a546873b6c5dc6a35621a0c6d0e33b78ba61fcdc4e'
-            '160a932d7560a8cb1ff9a045a4511e20d9b29c59829d963bb91dd9efffaa0efe'
+            '049f28123f39fe2a5eac943156e872f83cf14a1586c89848a643345efd7cfb34'
             'd1df5ab2873c559838145a5692158d43884041ae1752a2f7a62da52639426b30'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
@@ -751,5 +752,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474'
             'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5'
             '25acc8e306a9a3433da06dbc97d4c48fef249faba871e9701cffef4badbbc859'
-            'ebb967b1e99511134dc540a7032426f0f31cd1faa24583d3820798eda2664240')
+            'ebb967b1e99511134dc540a7032426f0f31cd1faa24583d3820798eda2664240'
+            'c2a26a7562ca68695bf8956273a860741fd13bf2860723a21e97dcbd212eb5c1')
 
