--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=54
+pkgrel=56
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -195,6 +195,9 @@ source=(
  "0079-ACPI-processor_idle-Skip_dummy_wait_for_AMD-Zen.patch"
  "0080-timer_fixes_6.x-git.patch"
  "0081-sched-fair-feec-scale_rt_capacity-improvements.patch"
+ "0082-PCI-ASPM-Wait_for_data_link_active_after_retraining.patch"
+ "0083-sched-cputime-Fix_the_bug_of_reading_time_backward.patch"
+ "0084-cgroup-fix_cgroup_get_from_id.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -753,5 +756,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5'
             '25acc8e306a9a3433da06dbc97d4c48fef249faba871e9701cffef4badbbc859'
             'ebb967b1e99511134dc540a7032426f0f31cd1faa24583d3820798eda2664240'
-            'c2a26a7562ca68695bf8956273a860741fd13bf2860723a21e97dcbd212eb5c1')
+            'c2a26a7562ca68695bf8956273a860741fd13bf2860723a21e97dcbd212eb5c1'
+            '0a77e24e40a026b14a2334bcc59b468e6dbaa28aac84a1a909b1c348f9e74a08'
+            'b154883feeb3a99d680e86813245510a1142ae2e9bddefb4f701e7ffad9e0acc'
+            '5013ad726f58696aaa8151ea7b3cfbc1262352c759bf9eb549a37fe0a8cca0a0')
 
