--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=56
+pkgrel=57
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -189,7 +189,7 @@ source=(
  "0073-ALSA_519_913.patch"
  "0074-cgroups_rwsem.patch"
  "0075-acpi-i2c_wake_irq_patchwork.patch"
- "0076-sched-fair-limit_sched_slice_duration.patch"
+ "0076-sched-fair-fixes_in_presence_of_many_sched_idle_tasks.patch"
  "0077-Fixups_n_Backports_for_s2idle.patch"
  "0078-v3-Softirq-rt-Optimizations.patch"
  "0079-ACPI-processor_idle-Skip_dummy_wait_for_AMD-Zen.patch"
@@ -198,6 +198,7 @@ source=(
  "0082-PCI-ASPM-Wait_for_data_link_active_after_retraining.patch"
  "0083-sched-cputime-Fix_the_bug_of_reading_time_backward.patch"
  "0084-cgroup-fix_cgroup_get_from_id.patch"
+ "0085-sched-cpuset-Fix_dl_cpu_busy_panic_due_to_empty_cs->cpus_allowed.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -751,7 +752,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '36c441891b9ac232217504f31955d2ea387125de510fd7d5c329a97e3d9562b0'
             '560f67167324aab09f2882c7418f34df6521f5182ee2357060e04731a35b077e'
             'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9'
-            'aba405b0deef1b249fc5d58095e88b641f7763e946ea8370859a4539d2440c90'
+            'ce72f9ddd266fdace24aac2b6ccda730c5480c243e09b878b8e621fd7b208f51'
             '9f83bbdbc63c58a0d0e26331691038a9b1fc3d2eb402e2309937d0adc4368474'
             'e3e9f130598d81ce96a354ed602bb68cf58293a5e27b21fc7a736ee00e9913f5'
             '25acc8e306a9a3433da06dbc97d4c48fef249faba871e9701cffef4badbbc859'
@@ -759,5 +760,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'c2a26a7562ca68695bf8956273a860741fd13bf2860723a21e97dcbd212eb5c1'
             '0a77e24e40a026b14a2334bcc59b468e6dbaa28aac84a1a909b1c348f9e74a08'
             'b154883feeb3a99d680e86813245510a1142ae2e9bddefb4f701e7ffad9e0acc'
-            '5013ad726f58696aaa8151ea7b3cfbc1262352c759bf9eb549a37fe0a8cca0a0')
+            '5013ad726f58696aaa8151ea7b3cfbc1262352c759bf9eb549a37fe0a8cca0a0'
+            '561e8f5b04e6bdd756371149199dd25d16932b92e279287d2a05c3efcbe4301b')
 
