--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=57
+pkgrel=60
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -199,6 +199,9 @@ source=(
  "0083-sched-cputime-Fix_the_bug_of_reading_time_backward.patch"
  "0084-cgroup-fix_cgroup_get_from_id.patch"
  "0085-sched-cpuset-Fix_dl_cpu_busy_panic_due_to_empty_cs->cpus_allowed.patch"
+ "0086-sched-core-Avoid_obvious_double_update_rq_clock_warning.patch"
+ "0087-workqueue-dont_skip_lockdep_work_dependency_in_cancel_work_sync.patch"
+ "0088-ALSA-dmaengine-increment_buffer_pointer_atomically.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -749,7 +752,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'd1df5ab2873c559838145a5692158d43884041ae1752a2f7a62da52639426b30'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
-            '36c441891b9ac232217504f31955d2ea387125de510fd7d5c329a97e3d9562b0'
+            'fb70c7b6cff32ac568c66dc089cea3154857337971cd07170eb56a25667dde22'
             '560f67167324aab09f2882c7418f34df6521f5182ee2357060e04731a35b077e'
             'b7ffc23e8575f468dd2145bb448528b1a8d7a7be34ed4a45afb2cfedceffe7e9'
             'ce72f9ddd266fdace24aac2b6ccda730c5480c243e09b878b8e621fd7b208f51'
@@ -761,5 +764,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '0a77e24e40a026b14a2334bcc59b468e6dbaa28aac84a1a909b1c348f9e74a08'
             'b154883feeb3a99d680e86813245510a1142ae2e9bddefb4f701e7ffad9e0acc'
             '5013ad726f58696aaa8151ea7b3cfbc1262352c759bf9eb549a37fe0a8cca0a0'
-            '561e8f5b04e6bdd756371149199dd25d16932b92e279287d2a05c3efcbe4301b')
+            '561e8f5b04e6bdd756371149199dd25d16932b92e279287d2a05c3efcbe4301b'
+            'f38253dafcf4b0f09529ac889bcd6095fa7f3438cd5fe7e1e4929b0fde75f1ce'
+            '8c7b5e8813f94ed5440e18be686704c6691c4321f18664f945c0f2116a078024'
+            '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b')
 
