--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=60
+pkgrel=62
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -202,6 +202,8 @@ source=(
  "0086-sched-core-Avoid_obvious_double_update_rq_clock_warning.patch"
  "0087-workqueue-dont_skip_lockdep_work_dependency_in_cancel_work_sync.patch"
  "0088-ALSA-dmaengine-increment_buffer_pointer_atomically.patch"
+ "0089-sched-core-sched-Fix-TASK_state-comparisons.patch"
+ "0090-sbitmap-fix_lockup_while_swapping.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -767,5 +769,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '561e8f5b04e6bdd756371149199dd25d16932b92e279287d2a05c3efcbe4301b'
             'f38253dafcf4b0f09529ac889bcd6095fa7f3438cd5fe7e1e4929b0fde75f1ce'
             '8c7b5e8813f94ed5440e18be686704c6691c4321f18664f945c0f2116a078024'
-            '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b')
+            '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b'
+            '9837738ff7721de537ddc7bac33f7e9da90d545913b08a0d58d7d4271b2f287a'
+            '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15')
 
