--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -74,7 +74,7 @@ _nf_cone=y
 
  pkgbase=linux-nspa-devel
 _major=6.0
-#_minor=2
+#_minor=4
 #_minorc=$((_minor+1))
 #_rcver=rc8
 pkgver=${_major}
@@ -96,6 +96,7 @@ source=(
   "config"
   "config_generic_nspa"
   "auto-cpu-optimization.sh"
+  "0000-TIP-locking-core_6.1-oct7.patch"
   "0002-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"   
   "0003-clear-patches.patch"  
   "0004-Maple-MG-LRU_6.0.patch"  
@@ -118,11 +119,12 @@ source=(
   "0054-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"   
   "0055-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch" 
   "0063-sched-fair-Minor_SIS_UTIL_optimizations.patch"
-  "0064-locking-rwsem_Disable_preemption_while_trying_for_rwsem_lock_V2.patch" 
   "0068-Add_latency_priority_for_CFS_class.patch"  
   "0070-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
+  "0071-sched-all_no_BUG_ON_warn_instead.patch"
   "0089-sched-core-sched-Fix-TASK_state-comparisons.patch"
   "0090-sbitmap-fix_lockup_while_swapping.patch"
+  "0091-hid-wacom-hide_in-prox_force_it_out-spam.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -557,6 +559,7 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '171c16a2f3ac505a467c0619761ba3cea9b9867fa655125c41c51915c83a1223'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
+            'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
             'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             '32743ebee0034e83f8695e992c3321ba35237f189f72657e5f36ded5bcf392c6'
@@ -579,9 +582,10 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             'e22faa7811a3de10affe5f7e6d671f263599c75f9f78cca6e3cdf7a9e36d71de'
             'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47'
             '73fcdd0c088067872d3d452e4505b05496f6c23cc2cd1b68333acc2897c56954'
-            '3da077dd1ef979f76864426277882dfa8fe68f9711edd6561d89e4c0d6e02adc'
-            '78ad119bf245e8f784127a18fab945e788f850fef8330ee769f492eb965fd8ec'
+            '6f9c0fd8f6827051a685a703a53bb79c578af00373431a41408bb4b7d90152d2'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
+            '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
             '9837738ff7721de537ddc7bac33f7e9da90d545913b08a0d58d7d4271b2f287a'
-            '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15')
+            '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15'
+            '9ad05e7a31f4f7e8290e7d394df06c9b1be27990799ca49d60de2c55f4cc79dc')
 
