--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -85,7 +85,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=2
+pkgrel=4
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -96,35 +96,36 @@ source=(
   "config"
   "config_generic_nspa"
   "auto-cpu-optimization.sh"
+  "0000-more-uarches-for-kernel-5.17+.patch"  
   "0000-TIP-locking-core_6.1-oct7.patch"
-  "0002-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"   
-  "0003-clear-patches.patch"  
-  "0004-Maple-MG-LRU_6.0.patch"  
-  "0005-MM-fixes_6.0.patch" 
-  "0014-more-uarches-for-kernel-5.17+.patch"  
-  "0017-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"  
-  "0018-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"  
-  "0019-pinctl-amd-threaded_irqs.patch"   
-  "0020-designware-i2c_IRQF_NO_THREAD.patch"  
-  "0021-background_reclaim_of_hugepages.patch"  
-  "0023-Reduce-SCHED_RR-timeslice-100-ms-10-jiffy.patch" 
-  "0024-mm-ncrease_max_map_count.patch"   
-  "0025-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"   
-  "0030-rcu-gp-workers.patch"  
-  "0031-smp-migrate_disable.patch"   
-  "0033-rtmutex-no-rcu-lock-while-spinning.patch" 
-  "0034-tk-timekeeping-suspend-fixes.patch"   
-  "0037-pm-suspend_tk_patches.patch" 
-  "0046-sched-fix_bad_task_migration_for_rt_tasks.patch"  
-  "0054-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"   
-  "0055-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch" 
-  "0063-sched-fair-Minor_SIS_UTIL_optimizations.patch"
-  "0068-Add_latency_priority_for_CFS_class.patch"  
-  "0070-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
-  "0071-sched-all_no_BUG_ON_warn_instead.patch"
-  "0089-sched-core-sched-Fix-TASK_state-comparisons.patch"
-  "0090-sbitmap-fix_lockup_while_swapping.patch"
-  "0091-hid-wacom-hide_in-prox_force_it_out-spam.patch"
+  "0000-TIP-rcu.2022.09.30-oct7.patch"
+  "0001-ClearLinux-patchwork.patch"    
+  "0002-MapleTree-MG_lru_6.0.patch"  
+  "0003-MM-fixes_6.0.patch"
+  "0004-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"   
+  "0005-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"  
+  "0006-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"  
+  "0007-pinctl-amd-threaded_irqs.patch"   
+  "0008-designware-i2c_IRQF_NO_THREAD.patch"  
+  "0009-background_reclaim_of_hugepages.patch"  
+  "0010-Reduce-SCHED_RR-timeslice-100-ms-10-jiffy.patch" 
+  "0011-mm-ncrease_max_map_count.patch"   
+  "0012-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"   
+  "0013-rcu-gp-workers.patch"  
+  "0014-smp-migrate_disable.patch"   
+  "0015-rtmutex-no-rcu-lock-while-spinning.patch" 
+  "0016-tk-timekeeping-suspend-fixes.patch"   
+  "0017-pm-suspend_tk_patches.patch" 
+  "0018-sched-fix_bad_task_migration_for_rt_tasks.patch"  
+  "0019-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"   
+  "0020-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch" 
+  "0021-sched-fair-Minor_SIS_UTIL_optimizations.patch"
+  "0022-Add_latency_priority_for_CFS_class.patch"  
+  "0023-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
+  "0024-sched-all_no_BUG_ON_warn_instead.patch"
+  "0025-sched-core-sched-Fix-TASK_state-comparisons.patch"
+  "0026-sbitmap-fix_lockup_while_swapping.patch"
+  "0027-hid-wacom-hide_in-prox_force_it_out-spam.patch"
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -559,12 +560,13 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '171c16a2f3ac505a467c0619761ba3cea9b9867fa655125c41c51915c83a1223'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
+            '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
-            'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
+            'f8769d0090df6cf9b89dd6b7874697629fde5b8a1aac0a59f007d0cfa0f2b24c'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             '32743ebee0034e83f8695e992c3321ba35237f189f72657e5f36ded5bcf392c6'
             '268e2defebfb538b5f996cbf99c6cd263597be92e0a8c91c93f448475d743a6b'
-            '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
+            'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
             '4f715ec191c760ede34963ea449c2f12cd58813cd0fa3a684297ab0f45c6ff49'
@@ -587,5 +589,5 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
             '9837738ff7721de537ddc7bac33f7e9da90d545913b08a0d58d7d4271b2f287a'
             '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15'
-            '9ad05e7a31f4f7e8290e7d394df06c9b1be27990799ca49d60de2c55f4cc79dc')
+            '896a3917af981bfc18a39775e5a88ce500a4b6968434b2a925f895340f7e25fb')
 
