--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=5
+pkgrel=6
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -90,8 +90,7 @@ source=(
   "0000-TIP-locking-core_6.1-oct7.patch"
   "0000-TIP-rcu.2022.09.30-oct7.patch"
   "0001-ClearLinux-patchwork.patch"
-  "0002-MapleTree-MG_lru_6.0.patch"
-  "0003-MM-fixes_6.0.patch"
+  "0002-MM-Maple-Tree-MGlru-all_6.1.patch"
   "0004-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
   "0005-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
   "0006-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
@@ -464,15 +463,14 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
-            '8546e6f8e10abc2eff8373ee0d3920ed1fd114e297ce5f0d47a4aad5719d2080'
+            'd1281eef29cd790c8416086b6ffde806f3555aeeceb17a4a248e032a788b77f8'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
             'f8769d0090df6cf9b89dd6b7874697629fde5b8a1aac0a59f007d0cfa0f2b24c'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
-            '32743ebee0034e83f8695e992c3321ba35237f189f72657e5f36ded5bcf392c6'
-            '268e2defebfb538b5f996cbf99c6cd263597be92e0a8c91c93f448475d743a6b'
+            'a16d854c622377ba752d5e17c1fc728a10802ac43289c17feef9bcb153385cde'
             'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
