--- a/linux-nspa-devel/config
+++ b/linux-nspa-devel/config
@@ -7620,7 +7620,7 @@ CONFIG_KFENCE_NUM_OBJECTS=255
 # CONFIG_KFENCE_DEFERRABLE is not set
 # CONFIG_KFENCE_STATIC_KEYS is not set
 CONFIG_KFENCE_STRESS_TEST_FAULTS=0
-CONFIG_HAVE_ARCH_KMSAN=y
+CONFIG_HAVE_ARCH_KMSAN is not set
 # end of Memory Debugging
 
 CONFIG_DEBUG_SHIRQ=y
