--- a/linux-nspa-devel/PKGBUILD
+++ b/linux-nspa-devel/PKGBUILD
@@ -75,7 +75,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-rt-devel-6.0-rt11
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=6
+pkgrel=8
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -89,6 +89,7 @@ source=(
   "0000-more-uarches-for-kernel-5.17+.patch"
   "0000-TIP-locking-core_6.1-oct7.patch"
   "0000-TIP-rcu.2022.09.30-oct7.patch"
+  "0000-TIP-sched-core_6.1-parital-backport.patch"
   "0001-ClearLinux-patchwork.patch"
   "0002-MM-Maple-Tree-MGlru-all_6.1.patch"
   "0004-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
@@ -108,17 +109,17 @@ source=(
   "0018-sched-fix_bad_task_migration_for_rt_tasks.patch"
   "0019-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"
   "0020-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch"
-  "0021-sched-fair-Minor_SIS_UTIL_optimizations.patch"
   "0022-Add_latency_priority_for_CFS_class.patch"
   "0023-locking-semaphore-Use_wake_q_to_wake_up_processes_outside_lock_cs.patch"
-  "0024-sched-all_no_BUG_ON_warn_instead.patch"
-  "0025-sched-core-sched-Fix-TASK_state-comparisons.patch"
   "0026-sbitmap-fix_lockup_while_swapping.patch"
   "0027-hid-wacom-Silence_log_spam.patch"
   "0028-sched-fair-feec-scale_rt_capacity-improvements.patch"
   "0030-platform-x86-AMD-pmf-CnQf.patch"
   "0031-sched-core-affinity_patchwork.patch"
   "0032-Implement-AMD-Pstate-EPP-Driver.patch"
+  "0033-ALSA-dmaengine-increment_buffer_pointer_atomically.patch"
+  "0034-HID-multitouch-Add_memory_barriers.patch"
+  "0035-Signal-break_out_of_wait_loops_on_kthread_stop.patch"  
 )
 
 export KBUILD_BUILD_HOST=archlinux
@@ -470,6 +471,7 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'd6df293139a7a04720b74832a726ebcf733f467b3af051570c6ba0c602d1fa8e'
             'f8769d0090df6cf9b89dd6b7874697629fde5b8a1aac0a59f007d0cfa0f2b24c'
+            'c3ebc4128dd4794193559cc2bdc9436f6b374c1381567f6d8b320d32cd978a40'
             '35a7cde86fb94939c0f25a62b8c47f3de0dbd3c65f876f460b263181b3e92fc0'
             'a16d854c622377ba752d5e17c1fc728a10802ac43289c17feef9bcb153385cde'
             'f6383abef027fd9a430fd33415355e0df492cdc3c90e9938bf2d98f4f63b32e6'
@@ -489,15 +491,15 @@ sha256sums=('98001d91f5bb1d29ad9489c71a6a75950c2610027e9eb0c513379b8f6d44df38'
             '91aa3623410e9228034f2272d4a55dc0a1f4291677daeeedc7007deef4a1575a'
             'e22faa7811a3de10affe5f7e6d671f263599c75f9f78cca6e3cdf7a9e36d71de'
             'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47'
-            '73fcdd0c088067872d3d452e4505b05496f6c23cc2cd1b68333acc2897c56954'
             '6f9c0fd8f6827051a685a703a53bb79c578af00373431a41408bb4b7d90152d2'
             '5595da97f297de0dc832d1f12254cb5d05c555ef6e2a113e38821dea8b37acca'
-            '8373f42c0d3e349983c486ee3ab78de7f2f71f225ee761cdf08f7e54e8430657'
-            '9837738ff7721de537ddc7bac33f7e9da90d545913b08a0d58d7d4271b2f287a'
             '153935699c4f15434c06582a64054660f55eaee9d5c70b277442b5156ccdfb15'
             '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe'
-            'c6c7d94199e2a1c607841a57068f6351d299ac5aa159ef777312722150856523'
+            'ee5649eb39573a396376fb2b2caffbf49fd230666189a005ce17228532399658'
             'ea7d35280b3a02acbc79a92fa5ddce678d5fdfaecb65ee35ef13a076a0a8eb55'
             'fb31aa7f60f970d5161cdd06386a96c9fda0504bde27fd5b61fa66c74e84fbb5'
-            'c0db4d0fdec2f74b05bfd59a4517c0738ab15afc3dd4c66eaa8e6999c284dddf')
+            'c0db4d0fdec2f74b05bfd59a4517c0738ab15afc3dd4c66eaa8e6999c284dddf'
+            '86030c72531b045bc9fc27329334f7c6a506fb789d0b81e08ff192b43491ae9b'
+            'ccc57033c40817060be1399e4be9e1db585c695967a74c0f3b94bc342c242bea'
+            'a32576a1c21e3cc1a892e36ea221677d5da318c141693127ab00bb863378638b')
 
